Spacing fixes

--- a/resources/css/components/quick-scan.css
+++ b/resources/css/components/quick-scan.css
@@ -243,6 +243,11 @@
     padding-bottom: 60px;
 }
 
+.quick-scan-opt-in--home .quick-scan-visualizer {
+    padding-top: 0;
+    height: 300px;
+}
+
 .quick-scan-opt-in .quick-scan-visualizer__items {
     overflow-y: hidden;
 }
@@ -1040,6 +1045,10 @@
 
     .quick-scan-visualizer {
         height: 350px;
+    }
+
+    .quick-scan-opt-in--home .newsletter-lesson__strikethrough {
+        top: 230px;
     }
 
     .quick-scan-visualizer__occluder--bottom {
